--- a/properties/src/org/netbeans/modules/properties/Bundle.properties
+++ b/properties/src/org/netbeans/modules/properties/Bundle.properties
@@ -41,7 +41,8 @@ ACS_LBL_RemovePropertyButton=N/A
 LBL_RemovePropertyButton_Mnem=R
 LBL_ValueLabel=Value:
 MSG_DeleteKeyQuestion=Really delete property {0} ?
-ACS_CTL_Table=This table shows keys and values
+ACSN_CTL_Table=This table shows keys and values
+ACSD_CTL_Table=N/A
 ACS_CTL_TEXTVALUE=Type the value here
 ACS_CTL_TEXTCOMMENT=Type the comments here
 
