--- a/beans/src/org/netbeans/modules/beans/Bundle.properties
+++ b/beans/src/org/netbeans/modules/beans/Bundle.properties
@@ -125,7 +125,7 @@ CTL_EventSetPanel_eventSetPanel=Event Set
 CTL_EventSetPanel_optionsPanel=Options
 CTL_EventSetPanel_typeLabel=Type:
 CTL_EventSetPanel_typeLabel_Mnemonic=T
-CTL_EventSetPanel_textLabel=(Fully-qualified listener interface name)
+CTL_EventSetPanel_textLabel=(Fully qualified listener interface name)
 CTL_EventSetPanel_emptyRadioButton=Generate Empty
 CTL_EventSetPanel_emptyRadioButton_Mnemonic=G
 CTL_EventSetPanel_alRadioButton=Generate ArrayList Implementation
@@ -141,7 +141,7 @@ ACSD_EventSetPanelDialog=Dialog for add new multicast event source by bean patte
 ACS_EventSetPanel_typeLabelA11yDesc=Event type
 ACS_EventSetPanel_typeComboBoxA11yName=Event type combo box
 ACS_EventSetPanel_typeComboBoxA11yDesc=Combo box containing all event types.
-ACS_EventSetPanel_textLabelA11yDesc=Fully-qualified listener interface name.
+ACS_EventSetPanel_textLabelA11yDesc=Fully qualified listener interface name.
 ACS_EventSetPanel_emptyRadioButtonA11yDesc=Generates an empty implementation.
 ACS_EventSetPanel_alRadioButtonA11yDesc=Generates a simple implementation for multiple listeners.
 ACS_EventSetPanel_ellRadioButtonA11yDesc=Generates an implementation using the EventListenerList support class from the javax.swing.event package.
@@ -153,7 +153,7 @@ CTL_UEventSetPanel_eventSetPanel=Event Set
 CTL_UEventSetPanel_optionsPanel=Options
 CTL_UEventSetPanel_typeLabel=Type:
 CTL_UEventSetPanel_typeLabel_Mnemonic=T
-CTL_UEventSetPanel_textLabel=(Fully-qualified listener interface name)
+CTL_UEventSetPanel_textLabel=(Fully qualified listener interface name)
 CTL_UEventSetPanel_emptyRadioButton=Generate Empty
 CTL_UEventSetPanel_emptyRadioButton_Mnemonic=G
 CTL_UEventSetPanel_implRadioButton=Generate Implementation
@@ -167,7 +167,7 @@ ACSD_UEventSetPanelDialog=Dialog for add new unicast event source by bean patter
 ACS_UEventSetPanel_typeLabelA11yDesc=Event type
 ACS_UEventSetPanel_typeComboBoxA11yName=Event type combo box
 ACS_UEventSetPanel_typeComboBoxA11yDesc=Combo box containing all event types.
-ACS_UEventSetPanel_textLabelA11yDesc=Fully-qualified listener interface name.
+ACS_UEventSetPanel_textLabelA11yDesc=Fully qualified listener interface name.
 ACS_UEventSetPanel_emptyRadioButtonA11yDesc=Generates an empty implementation.
 ACS_UEventSetPanel_implRadioButtonA11yDesc=Generates an implementation using the EventListenerList support class from the javax.swing.event package.
 ACS_UEventSetPanel_fireCheckBoxA11yDesc=Select this checkbox to generate event firing methods for all listeners.
