UI Chrome: checkbox - added extra space

--- a/o.n.core/src/org/netbeans/core/ui/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/ui/Bundle.properties
@@ -11,7 +11,7 @@
 
 CTL_DID_YOU_KNOW=Did you know?
 CTL_OpeningBrowser=Opening browser ...
-CTL_NEXTSTARTUP=Show Welcome Screen on Startup
+CTL_NEXTSTARTUP=\ Show Welcome Screen on Startup
 MNE_NEXTSTARTUP=S
 ERR_NoTipsFound=Tips not found
 CTL_START_TITLE=Welcome to NetBeans
