--- a/properties/src/org/netbeans/modules/properties/Bundle.properties
+++ b/properties/src/org/netbeans/modules/properties/Bundle.properties
@@ -11,7 +11,7 @@
 
 
 # BundleEditPanel
-ACS_BundleEditPanel=This panel allows you to edit Bundles
+ACS_BundleEditPanel=This panel allows you to edit bundles.
 CTL_AutoResize=\ Auto Resize
 ACS_CTL_AutoResize=N/A
 CTL_AutoResize_Mnem=A
@@ -46,7 +46,7 @@ ACSD_CTL_Table=N/A
 ACS_CTL_TEXTVALUE=Type the value here
 ACS_CTL_TEXTCOMMENT=Type the comments here
 
-ACS_PropertyPanel=This panel allows you to add new key, value and comment.
+ACS_PropertyPanel=This panel allows you to add new keys, values and comments.
 ACS_CTL_KeyText=N/A
 ACS_CTL_ValueText=N/A
 ACS_CTL_CommentText=N/A
@@ -57,12 +57,12 @@ CTL_AddLocale=Add Locale
 ACS_CTL_AddLocale=N/A
 CTL_RemoveLocale=Remove Locale
 ACS_CTL_RemoveLocale=N/A
-ACS_CTL_LocalesList=Here is a list of locales in this Bundle.
+ACS_CTL_LocalesList=List of locales in this bundle.
 ACS_CTL_NameText=N/A
 ACS_CTL_ChangeNameButton=N/A
 ACS_CTL_KeyList=N/A
 
-ACS_BundleNodeCustomizer=This dialog allows you to add and remove locales from this Bundle.
+ACS_BundleNodeCustomizer=This dialog allows you to add and remove locales from this bundle.
 
 # FileEntryNode
 HINT_name=Name of this object.
@@ -71,7 +71,7 @@ PROP_name=Name
 PROP_template=Template
 
 # FindPanel
-ACS_FindPanel=This dialog allows you to search by criteria in Bundles
+ACS_FindPanel=This dialog allows you to search by criteria in bundles.
 CTL_BackwardCheck=\ Backward Search
 ACS_CTL_BackwardCheck=N/A
 CTL_BackwardCheck_Mnem=B
@@ -99,9 +99,9 @@ ACS_CTL_FindCombo=N/A
 LBL_Title=Find
 
 # KeyNode
-HINT_item_comment=Comment above this property
-HINT_item_key=Key for this property
-HINT_item_value=Value of this property
+HINT_item_comment=Comment above this property.
+HINT_item_key=Key used by source code to access this property.
+HINT_item_value=Localized value of this property.
 MSG_CannotRenameKey=The key could not be renamed.\nAnother key with this name already exists.
 PROP_item_comment=Comment
 PROP_item_comment_mnem=C
@@ -119,7 +119,7 @@ CTL_RemoveKey=Remove Key
 ACS_CTL_RemoveKey=N/A
 ACS_CTL_NameText=N/A
 
-ACS_LocaleNodeCustomizer=This dialog allows you to add and remove keys from this Bundle.
+ACS_LocaleNodeCustomizer=This dialog allows you to add and remove keys from this bundle.
 
 # LocalePanel
 ACS_CTL_LocaleText=N/A
@@ -135,7 +135,7 @@ CTL_NewFile=New File:
 CTL_SupportedLocales=Predefined Locales:
 CTL_Variant=Variant:
 
-ACS_LocalePanel=This dialog allows you to choose locale
+ACS_LocalePanel=This dialog allows you to choose a locale.
 
 # manifest.mf
 OpenIDE-Module-Name=Resource Bundles
@@ -187,12 +187,12 @@ MSG_SaveFile=File {0} is modified. Save it ?
 LBL_ask_how_to_template=Overlapping Bundles
 # {0} - bare name of bundle file, incl. locale suffix if any, e.g. Foo_de
 MSG_ask_how_to_template=\
-  You are attempting to create the properties file {0} from the template,\n\
+  You are attempting to create the properties file {0} from template,\n\
   but a properties file of that name already exists in the same folder.\n\
   You can append the contents of the template to the existing file\n\
-  (so that the two sets of keys will be merged); do nothing and leave\n\
-  the existing file alone; or overwrite the existing file with the template.\n\
-  Which would you prefer?
+  and merge the two sets of keys, do nothing and leave the existing\n\
+  file alone, or overwrite the existing file with the template. Which\n\
+  would you prefer?
 MSG_AttemptToRenamePrimaryFile=This entry cannot be renamed.
 OPT_concatenate=Append
 OPT_leave_alone=Do nothing
