--- a/xml.text/src/org/netbeans/modules/xml/text/completion/Bundle.properties
+++ b/xml.text/src/org/netbeans/modules/xml/text/completion/Bundle.properties
@@ -5,3 +5,7 @@ MSG_result=Result of {0}*:
 MSG_loading=Loading XML document grammar ...
 
 MSG_loading_done=XML document grammar loaded.
+
+MSG_loading_failed=Cannot load XML document grammar.
+
+MSG_loading_cancel=XML document grammar loading have been cancelled.
