--- a/xml.text/src/org/netbeans/modules/xml/text/completion/Bundle.properties
+++ b/xml.text/src/org/netbeans/modules/xml/text/completion/Bundle.properties
@@ -1,11 +1,21 @@
-# Sample ResourceBundle properties file
+#                 Sun Public License Notice
+# 
+# The contents of this file are subject to the Sun Public License
+# Version 1.0 (the "License"). You may not use this file except in
+# compliance with the License. A copy of the License is available at
+# http://www.sun.com/
+# 
+# The Original Code is NetBeans. The Initial Developer of the Original
+# Code is Sun Microsystems, Inc. Portions Copyright 1997-2001 Sun
+# Microsystems, Inc. All Rights Reserved.
+
 #0 represents filtering prefix
 MSG_result=Result of {0}*:
 
-MSG_loading=Loading XML document grammar ...
+MSG_loading=Loading XML document grammar...
 
 MSG_loading_done=XML document grammar loaded.
 
 MSG_loading_failed=Cannot load XML document grammar.
 
-MSG_loading_cancel=XML document grammar loading have been cancelled.
+MSG_loading_cancel=XML document grammar invalidated.
