Fix of bug #17750: better "Cannot apply border..." message.

--- a/form/src/org/netbeans/modules/form/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/Bundle.properties
@@ -235,7 +235,7 @@ FMT_ERR_LayoutInit=Failed to initialize layout {0}.
 FMT_ERR_LayoutNotFound=No support class found for layout {0}.
 
 # message shows restriction of usage of Borders
-MSG_BorderNotApplicable=Cannot apply border. Borders can be used only with Swing components.
+MSG_BorderNotApplicable=Cannot apply border. Borders can be used only with Swing JComponent subclasses.
 
 # message shows restriction of usage of In-place text editing
 MSG_ComponentNotShown=In-place text editing is available only for shown components.
