Clarifying in build messaging that Ant might not be using the same JDK as will be used for NB (compilation libs and sanity start).

--- a/nbbuild/build.xml
+++ b/nbbuild/build.xml
@@ -417,7 +417,7 @@ workspaceswitcher
     <echo message="Starting a build for NetBeans (build ${buildnum}, config '${moduleconfig}') ..."/>
     <echo message="Selected modules: ${modules}"/>
     <echo message="OS: ${os.name} ${os.version}  Locale: ${user.language}_${user.region}"/>
-    <echo message="Java: ${java.vendor} ${java.version} in ${jdkhome}"/>
+    <echo message="Java: ${java.vendor} ${java.version} in ${java.home}; for NetBeans: ${jdkhome}"/>
     <echo message="Classpath: ${java.class.path}"/>
   </target>
 
