--- a/openide/test/build.xml
+++ b/openide/test/build.xml
@@ -64,17 +64,13 @@ Microsystems, Inc. All Rights Reserved.
     <target name="all" depends="runtests"/>
     
     <!-- This target builds tests -->
-    <target name="buildtests">
+    <target name="buildtests" depends="prepare-compile-classpath">
        <!-- This calls common build process. -->
        <!-- You can write your own is you need something special -->
-       
+       <property name="compiletest.classpath" refid="compiletest.classpath"/>
        <ant dir="." antfile="${xtest.general.antfile}"
              target="buildtests">
            <property name="compile.srcdir" value="unit/src;regr/src"/>
-           <property name="compile.classpath" value=""/>
-           <property name="compile.jarmode.classpath" value="../openide-13javac-workaround.jar;../netbeans/lib/openide.jar"/>
-           <property name="compile.srcmode.classpath" value="../openide-13javac-workaround.jar;../src"/>
-           <property name="compile.idemode.classpath" value="${xtest.home}/lib/openide-13javac-workaround.jar;${netbeans.home}/lib/openide.jar"/>
        </ant>
     </target>
     
@@ -112,32 +108,12 @@ Microsystems, Inc. All Rights Reserved.
     <!-- This target is executed from test-executor in newly created Project -->
     <!-- Name of this task is defined in cfg-xxx.xml -->
     <!-- This target executes standalone tests -->
-    <target name="runcodetest">
-	<path id="codetest.jarmode.classpath">
-        	<pathelement location="../netbeans/lib/openide.jar"/>
-        	<fileset dir="../../core/netbeans/lib">
-            		<include name="core.jar"/>
-            		<include name="ext/*.jar"/>
-        	</fileset>
-    	</path>
-    	<path id="codetest.srcmode.classpath">
-	        <pathelement location="../src"/>
-	        <fileset dir="../../core/netbeans/lib">
-            		<include name="core.jar"/>
-            		<include name="ext/*.jar"/>
-        	</fileset>
-    	</path>
-    	<path id="codetest.idemode.classpath">
-	        <pathelement location="${netbeans.home}/lib/openide.jar"/>
-	        <fileset dir="${netbeans.home}/lib">
-        	    <include name="core.jar"/>
-            	<include name="ext/*.jar"/>
-        	</fileset>
-    	</path>
-        <property name="codetest.classpath" value="${tbag.classpath}"/>
-        <property name="codetest.jarmode.classpath" refid="codetest.jarmode.classpath"/>
-        <property name="codetest.srcmode.classpath" refid="codetest.srcmode.classpath"/>
-        <property name="codetest.idemode.classpath" refid="codetest.idemode.classpath"/>
+    <target name="runcodetest" depends="prepare-codetest-classpath">
+        <path id="codetest.complete.classpath">
+          <path refid="codetest.classpath"/>
+          <pathelement path="${tbag.classpath}"/>
+        </path>
+        <property name="codetest.classpath" refid="codetest.complete.classpath"/>
         <ant dir="." antfile="${xtest.general.antfile}"
              target="test">
            <property name="xtest.exectype" value="code"/>
@@ -181,7 +157,45 @@ Microsystems, Inc. All Rights Reserved.
         </condition>
     </target>
 
- 
+    <!-- ========================= -->
+    <!-- Classpath for compilation -->
+    <!-- ========================= -->
+    
+    <target name="prepare-compile-classpath"
+         depends="jarcompile-classpath,srccompile-classpath,idecompile-classpath"/>
+    
+    <target name="jarcompile-classpath" depends="init,which-classpath" if="jarcode.classpath">
+        <echo message="Using jars classpath for compilation."/>
+    	<!-- this classpath will be used for compiling tests against jars -->
+	<path id="compiletest.classpath">        
+	    <pathelement location="../openide-13javac-workaround.jar"/>
+	    <pathelement location="../netbeans/lib/openide.jar"/>
+	    <pathelement path="${junit.path}"/>
+	    <pathelement path="${xerces.path}"/>
+	</path>
+    </target>
+        
+    <target name="srccompile-classpath" depends="init,which-classpath" if="srccode.classpath">
+        <echo message="Using srcs classpath for compilation."/>
+    	<!-- this classpath will be used for compiling tests against sources -->
+    	<path id="compiletest.classpath">        
+	        <pathelement location="../openide-13javac-workaround.jar"/>
+	        <pathelement location="../src"/>
+	        <pathelement path="${junit.path}"/>
+		<pathelement path="${xerces.path}"/>
+	</path>
+    </target>
+    
+    <target name="idecompile-classpath" depends="init,which-classpath" if="idecode.classpath">
+        <echo message="Using IDE classpath for compilation."/>
+    	<!-- this classpath will be used for compiling tests against installed IDE -->
+    	<path id="compiletest.classpath">        
+    		<pathelement location="${xtest.home}/lib/openide-13javac-workaround.jar"/>
+	        <pathelement location="${netbeans.home}/lib/openide.jar"/>
+	        <pathelement path="${junit.path}"/>
+		<pathelement path="${xerces.path}"/>
+   	</path>
+    </target>
     
     <!-- ================================== -->
     <!-- Classpath for execution code tests -->
