#11048: Mnemonics for Menu Window | Dock into and Window didn't work.

--- a/o.n.core/src/org/netbeans/core/actions/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/actions/Bundle.properties
@@ -118,6 +118,7 @@ GlobalProperties=&Properties
 
 # Docking action
 Docking=&Dock View Into
+CTL_Empty=Empty
 CTL_NewSingle=New &Single Frame
 CTL_NewMultiTab=New &Multi-tab Frame
 CTL_NewSplit=New S&plit Frame
